Latest antlr-runtime-LogicNG(logicng-j11 2.4.2) JGraphT(1.5.2-SNAPSHOT)
- https://github.com/logic-ng/LogicNG/issues/45
- https://github.com/logic-ng/LogicNG/releases/tag/v2.4.2-j11

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -71,7 +71,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.logicng</groupId>
-			<artifactId>logicng</artifactId>
+			<artifactId>logicng-j11</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.gavaghan</groupId>
