--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -288,7 +288,7 @@
 			<dependency>
 				<groupId>org.choco-solver</groupId>
 				<artifactId>choco-solver</artifactId>
-				<version>4.10.13</version>
+				<version>4.11.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
