--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -16,7 +16,7 @@
 			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
 			<distribution>repo</distribution>
 			<comments>A free, copyleft license for software and other kinds of
-				works</comments>
+				works</comments> 
 		</license>
 		<license>
 			<name>GNU Lesser General Public License, Version 3</name>
@@ -268,7 +268,7 @@
 			<dependency>
 				<groupId>org.jgrapht</groupId>
 				<artifactId>jgrapht-io</artifactId>
-				<version>1.5.2</version>
+				<version>1.5.3-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jsoup</groupId>
