WIP #820  icu4j library from `matheclipse-io` to `matheclipse-nlp`
- functions `IntegerName, RemoveDiacritics, Transliterate`
- changed dependency in `matheclipse-api` to `matheclipse-nlp`

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -51,6 +51,7 @@
 		<module>matheclipse-core</module>
 		<module>matheclipse-gpl</module>
 		<module>matheclipse-image</module>
+		<module>matheclipse-nlp</module>
 		<module>matheclipse-api</module>
 		<module>matheclipse-io</module>
 		<module>matheclipse-discord</module>
