--- a/symja_android_library/matheclipse-api/pom.xml
+++ b/symja_android_library/matheclipse-api/pom.xml
@@ -26,7 +26,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>matheclipse-io</artifactId>
+			<artifactId>matheclipse-nlp</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
