--- a/symja_android_library/matheclipse-io/pom.xml
+++ b/symja_android_library/matheclipse-io/pom.xml
@@ -35,6 +35,12 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>matheclipse-nlp</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-gpl</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -82,11 +88,6 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.ibm.icu</groupId>
-			<artifactId>icu4j</artifactId>
 		</dependency>
 
 		<dependency>
