--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -239,27 +239,27 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>3.1-SNAPSHOT</version>
+				<version>3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>3.1-SNAPSHOT</version>
+				<version>3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>3.1-SNAPSHOT</version>
+				<version>3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>3.1-SNAPSHOT</version>
+				<version>3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>3.1-SNAPSHOT</version>
+				<version>3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.antlr</groupId>
@@ -269,7 +269,7 @@
 			<dependency>
 				<groupId>org.jgrapht</groupId>
 				<artifactId>jgrapht-io</artifactId>
-				<version>1.5.3-SNAPSHOT</version>
+				<version>1.5.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jsoup</groupId>
@@ -351,6 +351,11 @@
 				<groupId>com.github.freva</groupId>
 				<artifactId>ascii-table</artifactId>
 				<version>1.8.0</version>
+			</dependency>
+			<dependency>
+				<groupId>de.labathome</groupId>
+				<artifactId>AdaptiveQuadrature</artifactId>
+				<version>1.0.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.arrow</groupId>
