--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -297,6 +297,11 @@
 				<version>2.0.9</version>
 			</dependency>
 			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-simple</artifactId>
+				<version>2.0.9</version>
+			</dependency>
+			<dependency>
 				<groupId>org.roaringbitmap</groupId>
 				<artifactId>RoaringBitmap</artifactId>
 				<version>1.0.0</version>
