[Build|OSGi] Migrate from Maven-Bundle-Plugin to BND-Maven-Plugin
The former uses the latter under the hood, thus the latter is always
more recent and more powerful.
The Bnd-Maven-Plugin requires Java-17 to run the Maven build.

--- a/symja_android_library/matheclipse-external/pom.xml
+++ b/symja_android_library/matheclipse-external/pom.xml
@@ -57,12 +57,12 @@
 		<plugins>
 
 			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
+				<groupId>biz.aQute.bnd</groupId>
+				<artifactId>bnd-maven-plugin</artifactId>
 				<configuration>
-					<instructions>
-						<Import-Package>!net.sf.saxon,*</Import-Package>
-					</instructions>
+					<bnd><![CDATA[
+						Import-Package: !net.sf.saxon,*
+					]]></bnd>
 				</configuration>
 			</plugin>
 
