--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -399,9 +399,9 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>maven-bundle-plugin</artifactId>
-					<version>5.1.9</version>
+					<groupId>biz.aQute.bnd</groupId>
+					<artifactId>bnd-maven-plugin</artifactId>
+					<version>7.0.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -444,8 +444,7 @@
 					<version>3.3.0</version>
 					<configuration>
 						<archive>
-							<manifestFile>
-								${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+							<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
 						</archive>
 					</configuration>
 				</plugin>
@@ -582,22 +581,21 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.artifactId}</Bundle-Name>
-						<!-- Suppress import of own exported packages -->
-						<Export-Package>*;-noimport:=true</Export-Package>
-						<_nouses>true</_nouses>
-					</instructions>
-					<niceManifest>true</niceManifest>
-				</configuration>
+				<groupId>biz.aQute.bnd</groupId>
+				<artifactId>bnd-maven-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>generate-manifest</id>
 						<goals>
-							<goal>manifest</goal>
+							<goal>bnd-process</goal>
 						</goals>
+						<configuration><bnd><![CDATA[
+							Bundle-SymbolicName: org.$[replacestring;${artifactId};-;.]
+							Bundle-Name: ${project.artifactId}
+							# Suppress import of own exported packages
+							-exportcontents: *;-noimport:=true
+							-noextraheaders: true
+						]]></bnd></configuration>
 					</execution>
 				</executions>
 			</plugin>
