[Build] Setup Maven toolchains and run Maven build with Java-17
but still target 11.
The subsequent Maven-plugin update requires Java-17 to run the build
itself.

--- a/.github/actions/setup-java-for-deployment/action.yml
+++ b/.github/actions/setup-java-for-deployment/action.yml
@@ -12,7 +12,10 @@ runs:
     - name: Set up JDK 11 for Maven Central Repository deployment
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        # Also generates a corresponding Maven toolchains.xml
+        java-version: |
+          11
+          17
         distribution: 'temurin'
         cache: 'maven' # Cache Maven dependencies between workflow runs
         # Properties for deployment to OSSRH:
