--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -214,7 +214,7 @@
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
-				<version>1.12.0</version>
+				<version>1.13.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
