--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -26,6 +26,7 @@
 	</licenses>
 	<developers>
 		<developer>
+			<id>axkr</id>
 			<name>Axel Kramer</name>
 			<email>axelclk@gmail.com</email>
 			<organization>Symja.org</organization>
@@ -214,7 +215,7 @@
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
-				<version>1.13.0-SNAPSHOT</version>
+				<version>1.13.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
