--- a/symja_android_library/matheclipse-discord/pom.xml
+++ b/symja_android_library/matheclipse-discord/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>matheclipse-discord</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
-	<description>The Symja discord module</description>
+	<description>Symja Java Symbolic Math Discord bot</description>
 
 	<licenses>
 		<license>
