--- a/symja_android_library/matheclipse-api/pom.xml
+++ b/symja_android_library/matheclipse-api/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>matheclipse-api</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
-	<description>The Symja api module</description>
+	<description>Symja Java Symbolic Math API.</description>
 
 	<licenses>
 		<license>
