--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -368,6 +368,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>us.hebi.matlab.mat</groupId>
+				<artifactId>mfl-core</artifactId>
+				<version>0.5.15</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
