--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -108,6 +108,10 @@
 			<artifactId>AdaptiveQuadrature</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>us.hebi.matlab.mat</groupId>
+			<artifactId>mfl-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 		</dependency>
