--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -165,7 +165,7 @@
 			<dependency>
 				<groupId>io.javalin</groupId>
 				<artifactId>javalin</artifactId>
-				<version>6.2.0</version>
+				<version>6.3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>io.pebbletemplates</groupId>
@@ -285,12 +285,12 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>2.0.16</version>
+				<version>2.1.0-alpha1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-simple</artifactId>
-				<version>2.0.16</version>
+				<version>2.1.0-alpha1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.roaringbitmap</groupId>
