--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -215,7 +215,7 @@
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
-				<version>1.14.0</version>
+				<version>1.14.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
