--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -67,6 +67,10 @@
 			<artifactId>commons-csv</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.logicng</groupId>
 			<artifactId>logicng</artifactId>
 		</dependency>
