--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.matheclipse</groupId>
 	<artifactId>matheclipse</artifactId>
@@ -78,7 +80,7 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
-	 
+
 	<repositories>
 		<repository>
 			<id>orekit</id>
@@ -102,12 +104,13 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
 		<release.build>false</release.build>
-		<deployment.suppress>false</deployment.suppress> <!-- child modules can set this true to not be published -->
+		<deployment.suppress>false</deployment.suppress> <!-- child modules can
+		set this true to not be published -->
 		<guava.minimal.version>32.0</guava.minimal.version>
 	</properties>
 	<dependencyManagement>
@@ -198,6 +201,11 @@
 				<version>1.12.0</version>
 			</dependency>
 			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.17.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.17.0</version>
@@ -211,7 +219,7 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>5.3.0</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
@@ -445,7 +453,8 @@
 					<version>3.4.2</version>
 					<configuration>
 						<archive>
-							<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+							<manifestFile>
+								${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
 						</archive>
 					</configuration>
 				</plugin>
@@ -462,7 +471,8 @@
 						<tagNameFormat>v@{project.version}</tagNameFormat>
 						<autoVersionSubmodules>true</autoVersionSubmodules>
 						<useReleaseProfile>false</useReleaseProfile>
-						<releaseProfiles>publish-to-maven-central,exact-target-jdk</releaseProfiles>
+						<releaseProfiles>
+							publish-to-maven-central,exact-target-jdk</releaseProfiles>
 						<arguments>-Drelease.build=true</arguments>
 					</configuration>
 				</plugin>
@@ -590,7 +600,8 @@
 						<goals>
 							<goal>bnd-process</goal>
 						</goals>
-						<configuration><bnd><![CDATA[
+						<configuration>
+							<bnd><![CDATA[
 							Bundle-SymbolicName: org.$[replacestring;${project.artifactId};-;.]
 							Bundle-Name: ${project.artifactId}
 							# Suppress import of own exported packages
@@ -598,7 +609,8 @@
 							#Import Guava without upper bound
 							Import-Package: com.google.common.*;version="${guava.minimal.version}", *
 							-noextraheaders: true
-						]]></bnd></configuration>
+						]]></bnd>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -609,7 +621,8 @@
 			<id>exact-target-jdk</id>
 			<build>
 				<plugins>
-					<!-- Activate toolchains only on demand to not require a set up toolchains.xml for everyone building Symja-->
+					<!-- Activate toolchains only on demand to not require a set
+					up toolchains.xml for everyone building Symja-->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-toolchains-plugin</artifactId>
