Add jakarta.annotation to pom.xml

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -35,6 +35,10 @@
 			<artifactId>apfloat</artifactId>
 		</dependency>
 		<dependency>
+    			<groupId>jakarta.annotation</groupId>
+    			<artifactId>jakarta.annotation-api</artifactId> 
+		</dependency>
+		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-clustering</artifactId>
 		</dependency>
