--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -118,6 +118,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+    			<groupId>jakarta.annotation</groupId>
+    			<artifactId>jakarta.annotation-api</artifactId>
+    			<version>3.0.0</version>
+			</dependency>
+			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>2.18.3</version>
@@ -247,27 +252,27 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>4.0</version>
+				<version>4.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>4.0</version>
+				<version>4.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>4.0</version>
+				<version>4.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>4.0</version>
+				<version>4.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>4.0</version>
+				<version>4.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jgrapht</groupId>
