pom.xml: added `com.github.spotbugs` improved `fastutil` definition

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -123,6 +123,11 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 		</dependency>
+        <dependency>
+    			<groupId>com.github.spotbugs</groupId>
+    			<artifactId>spotbugs-annotations</artifactId>
+    			<scope>provided</scope>  
+     	</dependency>
 		<!-- test dependencies -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
