--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -396,6 +396,12 @@
 				<artifactId>mfl-core</artifactId>
 				<version>0.5.15</version>
 			</dependency>
+			<dependency>
+    				<groupId>com.github.spotbugs</groupId>
+    				<artifactId>spotbugs-annotations</artifactId>
+    				<version>4.9.3</version> 
+    				<scope>provided</scope>  
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
