--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -96,7 +96,7 @@
 		</repository>
 		<repository>
 			<id>maven-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
 			<layout>default</layout>
 			<releases>
 				<enabled>false</enabled>
