--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -563,6 +563,28 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>${java.version}</release>
+					    <annotationProcessorPaths>
+                        <!-- Include `log4j-core` providing
+                          1. `org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor` that generates `Log4j2Plugins.dat`
+                          2. `org.apache.logging.log4j.core.config.plugins.processor.GraalVmProcessor` that generates the GraalVM reachability metadata file 
+                         -->
+                             <path>
+                                 <groupId>org.apache.logging.log4j</groupId>
+                                 <artifactId>log4j-core</artifactId>
+                                 <version>2.25.0</version>
+                             </path>
+                        </annotationProcessorPaths>
+                        <annotationProcessors>
+                            <!-- Process sources using `PluginProcessor` to generate `Log4j2Plugins.dat` -->
+                            <processor>org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor</processor>
+                            <!-- Process sources using `GraalVmProcessor` to generate a GraalVM reachability metadata file -->
+                            <processor>org.apache.logging.log4j.core.config.plugins.processor.GraalVmProcessor</processor>
+                        </annotationProcessors>
+                        <compilerArgs>
+                            <!-- Provide the project coordinates to `GraalVmProcessor`: -->
+                            <arg>-Alog4j.graalvm.groupId=${project.groupId}</arg>
+                            <arg>-Alog4j.graalvm.artifactId=${project.artifactId}</arg>
+                        </compilerArgs>
 					<!--				<compilerArgs>
 						<arg>-XDcompilePolicy=simple</arg>
 					<arg>-Xplugin:ErrorProne</arg>
