--- a/symja_android_library/matheclipse-parser/pom.xml
+++ b/symja_android_library/matheclipse-parser/pom.xml
@@ -13,6 +13,14 @@
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>The Symja parser module</description>
 
+    <dependencies>
+	    <dependency>
+        		<groupId>org.yaml</groupId>
+    			<artifactId>snakeyaml</artifactId>
+    			<version>2.4</version>      
+    			<scope>provided</scope>        
+		</dependency> 
+	</dependencies>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License, Version 3</name>
