--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -250,6 +250,11 @@
 				<version>1.1.3</version>
 			</dependency>
 			<dependency>
+			    <groupId>org.hipparchus</groupId>
+			    <artifactId>hipparchus-core</artifactId>
+		        <version>4.1-SNAPSHOT</version>
+		    </dependency>
+			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
 				<version>4.1-SNAPSHOT</version>
