--- a/.github/actions/setup-java-for-deployment/action.yml
+++ b/.github/actions/setup-java-for-deployment/action.yml
@@ -16,8 +16,8 @@ runs:
         java-version: '17'
         distribution: 'temurin'
         cache: 'maven' # Cache Maven dependencies between workflow runs
-        # Properties for deployment to OSSRH:
-        server-id: ossrh
+        # Properties for deployment to Maven Central Portal:
+        server-id: central-portal
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
         # Properties for gpg signing:
