--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -74,12 +74,14 @@
 	</issueManagement>
 	<distributionManagement>
 		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+			<id>central-portal</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+			<!-- Only the URL where release artifacts will be available for
+			download, for upload the Central Portal Upload service is used. -->
 		</repository>
 		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>central-portal</id>
+			<url>https://central.sonatype.com/repository/maven-snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -566,12 +568,17 @@
 					<version>3.6.3</version>
 				</plugin>
 				<plugin>
-					<groupId>org.sonatype.plugins</groupId>
-					<artifactId>nexus-staging-maven-plugin</artifactId>
-					<version>1.7.0</version>
+					<groupId>org.sonatype.central</groupId>
+					<artifactId>central-publishing-maven-plugin</artifactId>
+					<version>0.10.0</version>
+					<extensions>true</extensions>
 					<configuration>
-						<serverId>ossrh</serverId>
-						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+						<!-- See also: https://central.sonatype.org/publish/publish-portal-maven/#stagingdirectory -->
+						<autoPublish>false</autoPublish>
+						<skipPublishing>${deployment.suppress}</skipPublishing>
+						<deploymentName>MathEclipse-${project.version}</deploymentName>
+						<publishingServerId>central-portal</publishingServerId>
+						<waitUntil>validated</waitUntil>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -730,15 +737,8 @@
 						</executions>
 					</plugin>
 					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<extensions>true</extensions>
-						<configuration>
-							<skipNexusStagingDeployMojo>${deployment.suppress}</skipNexusStagingDeployMojo>
-							<!-- Documentation:
-							https://github.com/sonatype/nexus-maven-plugins/blob/master/staging/maven-plugin/README.md-->
-							<autoReleaseAfterClose>false</autoReleaseAfterClose>
-						</configuration>
+						<groupId>org.sonatype.central</groupId>
+						<artifactId>central-publishing-maven-plugin</artifactId>
 					</plugin>
 				</plugins>
 			</build>
