--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -282,7 +282,7 @@
 			<dependency>
 				<groupId>org.jgrapht</groupId>
 				<artifactId>jgrapht-io</artifactId>
-				<version>1.5.2</version>
+				<version>1.5.3-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jsoup</groupId>
