Upgrade JDK from 11 to 17 for deployment

--- a/.github/actions/setup-java-for-deployment/action.yml
+++ b/.github/actions/setup-java-for-deployment/action.yml
@@ -9,13 +9,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up JDK 11 for Maven Central Repository deployment
-      uses: actions/setup-java@v3
+    - name: Set up JDK 17 for Maven Central Repository deployment
+      uses: actions/setup-java@v4
       with:
         # Also generates a corresponding Maven toolchains.xml
-        java-version: |
-          11
-          17
+        java-version: '17.0.17'
         distribution: 'temurin'
         cache: 'maven' # Cache Maven dependencies between workflow runs
         # Properties for deployment to OSSRH:
