enable matheclipse-discord module

--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -57,7 +57,7 @@
 <!-- 		<module>matheclipse-llm</module> -->
 		<module>matheclipse-api</module>
 		<module>matheclipse-io</module>
-<!-- 		<module>matheclipse-discord</module> -->
+ 		<module>matheclipse-discord</module> 
 		<module>matheclipse-logging</module>
 		<module>matheclipse-script</module>
 	</modules>
