Add j2html and jsvg dependencies; update apfloat to 1.16.0-SNAPSHOT

--- a/symja_android_library/matheclipse-image/pom.xml
+++ b/symja_android_library/matheclipse-image/pom.xml
@@ -37,7 +37,10 @@
 			<artifactId>matheclipse-logging</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+		<dependency>
+    			<groupId>com.github.weisj</groupId>
+    			<artifactId>jsvg</artifactId> 
+		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
