--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -128,6 +128,10 @@
     			<artifactId>spotbugs-annotations</artifactId>
     			<scope>provided</scope>  
      	</dependency>
+		<dependency>
+    			<groupId>com.j2html</groupId>
+    			<artifactId>j2html</artifactId> 
+       	</dependency>
 		<!-- test dependencies -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
