--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -232,7 +232,7 @@
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
-				<version>1.15.0</version>
+				<version>1.16.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
@@ -402,11 +402,21 @@
 				<version>0.5.15</version>
 			</dependency>
 			<dependency>
+    				<groupId>com.j2html</groupId>
+    				<artifactId>j2html</artifactId>
+     			<version>1.6.0</version>
+       		</dependency>
+			<dependency>
     				<groupId>com.github.spotbugs</groupId>
     				<artifactId>spotbugs-annotations</artifactId>
     				<version>4.9.8</version> 
     				<scope>provided</scope>  
 			</dependency>
+			<dependency>
+    			  <groupId>com.github.weisj</groupId>
+    			  <artifactId>jsvg</artifactId>
+   	 		  <version>2.0.0</version>
+		    </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
