add hipparchus-geometry dependency to pom.xml

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -52,6 +52,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hipparchus</groupId>
+			<artifactId>hipparchus-geometry</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-ode</artifactId>
 		</dependency>
 		<dependency>
