--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -271,6 +271,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.hipparchus</groupId>
+				<artifactId>hipparchus-geometry</artifactId>
+				<version>4.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
 				<version>4.1-SNAPSHOT</version>
 			</dependency>
